🚀 ロト7検索ツールindex.html初アップロード

--- a/index.html
+++ b/index.html
@@ -227,12 +227,13 @@ function featureQuickSearch(feature) {
     const res = await fetch("./loto7.json");
     data = await res.json();
 
-    // データを開催回の降順で並べ替え
-    data.sort((a, b) => Number(b["開催回"]) - Number(a["開催回"]));
+ // データを開催回の降順で並べ替え
+data.sort((a, b) => Number(b["開催回"]) - Number(a["開催回"]));
 
-    // 最新のデータ更新日を取得
-    const latestDate = new Date(Math.max(...data.map(item => new Date(item["日付"]))));
-    const latestDateString = latestDate.toLocaleDateString("ja-JP"); // 日本のローカル日付形式に変換
+// 最新のデータ更新日を取得
+const dates = [...data.map(item => item["日付"])].sort();  // ★ここ！スプレッド演算子[...]でコピー
+const latest = dates[dates.length - 1];
+document.getElementById("lastUpdated").innerHTML = `データ更新日：${latest} ｜ツールVer：<a href="https://www.kujitonari.net/loto_search_tool" target="_blank" style="color:#d94f4f;text-decoration:underline;">1.01</a>`;
 
     renderTable(data);
 
