🔧 index.html：特徴ラベル検索を完全一致に修正

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ async function loadData() {
       const date = item["日付"];
       const inRound = round >= fromRound && round <= toRound;
       const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
-      const hasFeature = checked.length === 0 || checked.every(f => item["特徴"]?.includes(f));
+      const hasFeature = checked.length === 0 || checked.every(f => (item["特徴"]?.split("・") || []).includes(f));
       
     const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].map(n => Number(n));
     const includeMatch = includeNumbers.length === 0 || includeNumbers.every(n => nums.includes(n));
