--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ function featureQuickSearch(feature) {
 
 async function loadData() {
   const response = await fetch("loto7.json");
-  const data = await response.json();
+  data = await response.json(); // ← const を消して、上の data を上書きする！
 
   // データを開催回の降順で並べ替え
   data.sort((a, b) => Number(b["開催回"]) - Number(a["開催回"]));
