--- a/index.html
+++ b/index.html
@@ -289,7 +289,10 @@ function renderTable(filteredData) {
     });
 
     renderTable(filtered);
-    document.getElementById("resultCount").textContent = `検索結果：${filtered.length} 件`;
+    document.getElementById("resultCount").textContent = `検索結果：${filtered.length} 件（条件：` +
+    (fromRound !== 1 || toRound !== 9999 ? `開催回 ${fromRound}〜${toRound} ` : "") +
+    (fromDate || toDate ? `開催日 ${fromDate || '未指定'}〜${toDate || '未指定'} ` : "") +
+    (checked.length ? `特徴：` + checked.join("・") : "全件") + `)`;
   }
 
   function scrollTableToTop() {
