--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     }
 
 
-.filters button {
+.filters-button {
   background-color: #ff8888;
   color: white;
   font-size: 16px;
@@ -173,11 +173,10 @@
 </div>
 
 <!-- ここから検索ボタンたち -->
-<button onclick="filterResults()">
+<button class="filters-button" onclick="filterResults()">
   <i class="fas fa-magnifying-glass"></i> 検索
 </button>
-
-<button onclick="resetFilters()" style="margin-left: 10px;">
+<button class="filters-button" onclick="resetFilters()" style="margin-left: 10px;">
   <i class="fas fa-rotate-right"></i> リセット
 </button>
 <p id="resultCount" style="margin-top: 10px; font-weight: bold;"></p>
