--- a/index.html
+++ b/index.html
@@ -115,6 +115,13 @@
       font-size: 16px;
     }
 
+.filter-block {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  flex-shrink: 1;
+  min-width: 0;
+}
 
 @media screen and (max-width: 768px) {
   td:nth-child(5) {
