--- a/index.html
+++ b/index.html
@@ -185,15 +185,13 @@
   <span class="info-icon" onclick="showPopup(event, '選んだ奇数・偶数の比率に一致する回だけを表示します')">ⓘ</span>
 </div>
 </div>
-<div>
-<!-- ここから検索ボタンたち -->
-<button class="filters-button" onclick="filterResults()">
-  <i class="fas fa-magnifying-glass"></i> 検索
-</button>
-<button class="filters-button" onclick="resetFilters()" style="margin-left: 10px;">
-  <i class="fas fa-rotate-right"></i> リセット
-</button>
-<p id="resultCount" style="margin-top: 10px; font-weight: bold;"></p>
+<div style="margin: 12px 0; display: flex; gap: 10px; flex-wrap: wrap;">
+  <button class="filters-button" onclick="filterResults()">
+    <i class="fas fa-magnifying-glass"></i> 検索
+  </button>
+  <button class="filters-button" onclick="resetFilters()">
+    <i class="fas fa-rotate-right"></i> リセット
+  </button>
 </div>
 <div class="scroll-container" id="scrollContainer">
 <table id="resultTable">
