✨ v1.11.3 合計値＆奇数偶数構成フィルタ追加

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 <label><input class="feature" type="checkbox" value="キャリーあり"/> キャリーあり</label>
 <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
 </div>
+</div>
 <button onclick="filterResults()">
   <i class="fas fa-magnifying-glass"></i> 検索
 </button>
