--- a/index.html
+++ b/index.html
@@ -271,8 +271,13 @@ function renderTable(filteredData) {
     const filtered = data.filter(item => {
       const round = parseInt(item["開催回"]);
       const date = item["日付"];
+
+const formatToDateStr = d => new Date(d).toISOString().split("T")[0];
+const inDate = (!fromDate || formatToDateStr(date) >= fromDate) &&
+               (!toDate   || formatToDateStr(date) <= toDate);
+
+
       const inRound = round >= fromRound && round <= toRound;
-      const inDate = (!fromDate || date >= fromDate) && (!toDate || date <= toDate);
       const hasFeature = checked.length === 0 || checked.every(f => (item["特徴"]?.split("・") || []).includes(f));
       
     const nums = [item["第1数字"], item["第2数字"], item["第3数字"], item["第4数字"], item["第5数字"], item["第6数字"], item["第7数字"]].map(n => Number(n));
