✨ v1.11.3 合計値＆奇数偶数構成フィルタ追加

--- a/index.html
+++ b/index.html
@@ -320,11 +320,13 @@ function filterResults() {
 
   renderTable(filtered);
 
-  document.getElementById("resultCount").textContent = `検索結果：${filtered.length} 件（条件：` +
-    (fromRound !== 1 || toRound !== 9999 ? `開催回 ${fromRound}〜${toRound} ` : "") +
-    (fromDate || toDate ? `開催日 ${fromDate || '未指定'}〜${toDate || '未指定'} ` : "") +
-    (checked.length ? `特徴：` + checked.join("・") : "全件") + `)`;
-}
+document.getElementById("resultCount").textContent =
+  `検索結果：${filtered.length} 件（条件：` +
+  (fromRound !== 1 || toRound !== 9999 ? `開催回 ${fromRound}〜${toRound} ` : "") +
+  (fromDate || toDate ? `開催日 ${fromDate || '未指定'}〜${toDate || '未指定'} ` : "") +
+  sumText + compText +
+  (checked.length ? `特徴：` + checked.join("・") : "全件") + `)`;
+  }
 
   function scrollTableToTop() {
     document.getElementById("scrollContainer").scrollTo({ top: 0, behavior: "smooth" });
