✨ v1.11.3 合計値＆奇数偶数構成フィルタ追加

--- a/index.html
+++ b/index.html
@@ -157,11 +157,9 @@
 <label><input class="feature" type="checkbox" value="キャリーあり"/> キャリーあり</label>
 <span class="info-icon" onclick="showPopup(event, 'キャリーオーバーが発生していた回です。')">ⓘ</span>
 <div style="display: flex; align-items: baseline; gap: 8px;">
-  <span>合計値 From:</span>
-  <input id="fromSum" type="number" min="28" max="273" style="width: 80px;" />
-  <span>To:</span>
-  <input id="toSum" type="number" min="28" max="273" style="width: 80px;" />
-
+<label>合計値 From:<input id="fromSum" type="number" min="28" max="273" style="width: 80px;" /></label>
+<label>To:<input id="toSum" type="number" min="28" max="273" style="width: 80px;" /></label>
+</div>
   <label for="oddEvenPattern">奇数・偶数構成:</label>
   <select id="oddEvenPattern" style="margin-left: 4px;">
     <option value="">全件</option>
